Added color names to the css page

--- a/iiCt/src/styles.css
+++ b/iiCt/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+/* Site Colors */
+.prime-grey {
+    color: gray;
+}
+
+.prime-orange {
+    color: orange;
+}
+
+.logo-orange {
+    color: orangered;
+}
+
+.prime-white {
+    color: whitesmoke;
+}
