created 1st page

--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,1 +1,8 @@
-<p>home-page works!</p>
+<div class="row">
+    <div class="img-position" >
+        <img class="" src="/assets/images/iict_trnspt_lrg.png"/>
+    </div>
+</div>
+<div class="row padding">
+    
+</div>
