--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,23 @@
-<p>nav-bar works!</p>
+<div class=" background ui secondary  menu ">
+    <a routerLink="home" class=" item menutext">
+      <img class="logo" src="/assets/images/iict_acro_sml.png"/>
+    </a>
+    <a routerLink="home" class=" item menutext ">
+      Company Profile
+    </a>
+    <a routerLink="about-us" class="item menutext">
+      Our Services
+    </a>
+    <a routerLink="team" class="item menutext">
+      OLur Enterprise
+    </a>
+    <a routerLink="contact" class="item menutext">
+      The Work
+    </a>
+    <a routerLink="team" class="item menutext">
+        Contact Us
+    </a>
+    <a routerLink="contact" class="item menutext">
+       About Me
+    </a>
+</div>
