--- a/iiCt/src/app/app.component.html
+++ b/iiCt/src/app/app.component.html
@@ -1,16 +1,10 @@
 
 <div class="container">
-    <div class="jumbotron">
-      <h1>Welcome</h1>
-      <h2>Angular & Bootstrap Demo</h2>
-    </div>
-    <div class="panel panel-primary">
-      <div class="panel-heading">Status</div>
-      <div class="panel-body">
-        <h3>{{title}}</h3>
-      </div>
-    </div>
-  </div>
+    <div class="inner-triangle"></div>
+    <div class="inner-triangle-bottom"></div>
+      <app-nav-bar></app-nav-bar>
+      <app-home-page></app-home-page>
+</div>
 
 
 <router-outlet></router-outlet>
