--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -2,6 +2,8 @@
     <a routerLink="home" class=" item menutext">
       <img class="logo" src="/assets/images/iict_acro_sml.png"/>
     </a>
+    <a routerLink="contact" class="item menutext"></a>
+    <a routerLink="contact" class="item menutext"></a>
     <a routerLink="home" class=" item menutext ">
       Company Profile
     </a>
@@ -9,7 +11,7 @@
       Our Services
     </a>
     <a routerLink="team" class="item menutext">
-      OLur Enterprise
+      Our Expertise
     </a>
     <a routerLink="contact" class="item menutext">
       The Work
@@ -17,6 +19,8 @@
     <a routerLink="team" class="item menutext">
         Contact Us
     </a>
+    <a routerLink="contact" class="item menutext"></a>
+    <a routerLink="contact" class="item menutext"></a> 
     <a routerLink="contact" class="item menutext">
        About Me
     </a>
