--- a/iiCt/src/app/app.component.html
+++ b/iiCt/src/app/app.component.html
@@ -1,10 +1,7 @@
-
-<div class="container">
-    <div class="inner-triangle"></div>
-    <div class="inner-triangle-bottom"></div>
-      <app-nav-bar></app-nav-bar>
-      <app-home-page></app-home-page>
+<div>
+  <div class="inner-triangle"></div>
+  <div class="inner-triangle-bottom"></div>
+  <app-nav-bar></app-nav-bar>
+  <app-home-page></app-home-page>
 </div>
-
-
 <router-outlet></router-outlet>
