Tweaked the look of the navbar and the sizing of the big logo on the main page

--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="img-position" >
-        <img class="" src="/assets/images/iict_trnspt_lrg.png"/>
+        <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
     </div>
 </div>
 <div class="row padding">
