--- a/iiCt/src/app/nav-bar/nav-bar.component.css
+++ b/iiCt/src/app/nav-bar/nav-bar.component.css
@@ -3,9 +3,10 @@
     font-weight: 500;
     color: whitesmoke;
     z-index: 2;
+    width: 120px;
 }
 
 .logo {
-    font-size: 30px;
+    font-size: 25px;
     border-radius: 1px;
 }
