--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,9 @@
 <div class=" background ui secondary  menu ">
+  <a routerLink="contact" class="item menutext"></a>
     <a routerLink="home" class=" item menutext">
       <img class="logo" src="/assets/images/iict_acro_sml.png"/>
     </a>
-    <a routerLink="contact" class="item menutext"></a>
+    
     <a routerLink="contact" class="item menutext"></a>
     <a routerLink="home" class=" item menutext ">
       Company Profile
@@ -14,14 +15,15 @@
       Our Expertise
     </a>
     <a routerLink="contact" class="item menutext">
-      The Work
+      Our Work
     </a>
     <a routerLink="team" class="item menutext">
         Contact Us
     </a>
     <a routerLink="contact" class="item menutext"></a>
-    <a routerLink="contact" class="item menutext"></a> 
+    
     <a routerLink="contact" class="item menutext">
        About Me
     </a>
+    <a routerLink="contact" class="item menutext"></a> 
 </div>
