--- a/iiCt/src/styles.css
+++ b/iiCt/src/styles.css
@@ -1,14 +1,14 @@
 /* Site Colors */
 .prime-grey {
-    color: gray;
+    color: #545454;
 }
 
 .prime-orange {
-    color: orange;
+    color: #ff914d;
 }
 
 .logo-orange {
-    color: orangered;
+    color: #fe5828;
 }
 
 .prime-white {
