Fixed the look of the home page

--- a/iiCt/src/app/app.component.html
+++ b/iiCt/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div>
-  <div class="inner-triangle"></div>
-  <div class="inner-triangle-bottom"></div>
+<div class="">
   <app-nav-bar></app-nav-bar>
   <app-home-page></app-home-page>
 </div>
