--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,8 +1,15 @@
-<div class="row">
+<div class="background-dark">
+    <div class="triangle-top"></div>
     <div class="img-position" >
         <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
+        <!-- <div class="triangle-bottom"></div> -->
     </div>
+    <div class="triangle-bottom"></div>
 </div>
-<div class="row padding">
+
+<!-- <div class="row padding background-dark">
     
+</div> -->
+<div class="">
+    <p>Page 2 </p>
 </div>
