--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class=" background ui secondary  menu ">
+<div class="ui secondary  menu background-dark">
   <a routerLink="contact" class="item menutext"></a>
     <a routerLink="home" class=" item menutext">
       <img class="logo" src="/assets/images/iict_acro_sml.png"/>
