--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -1,1 +1,17 @@
-<p>about-me works!</p>
+<div class="container">
+  <div class="background-light">
+    <div class="">
+      <p>About Me Page</p>
+
+    </div>
+    <div class="">
+
+
+    </div>
+  </div>
+
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
+
