--- a/iiCt/src/app/company-profile/company-profile.component.html
+++ b/iiCt/src/app/company-profile/company-profile.component.html
@@ -1,1 +1,16 @@
-<p>company-profile works!</p>
+<div class="container">
+  <div class="background-light">
+    <div class="">
+      <p>Company Profile Page</p>
+
+    </div>
+    <div class="">
+
+
+    </div>
+  </div>
+
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
