--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,17 @@
-<p>contact-us works!</p>
+<div class="container">
+  <div class="background-light">
+    <div class="">
+      <p>Contact Us Page</p>
+
+    </div>
+    <div class="">
+
+
+    </div>
+  </div>
+
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
+
