--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,15 +1,17 @@
-<div class="background-dark">
-    <div class="triangle-top"></div>
+<div class="container">
+  <div class="background-dark">
     <div class="img-position" >
+      <div class="triangle-top"></div>
         <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
         <!-- <div class="triangle-bottom"></div> -->
     </div>
     <div class="triangle-bottom"></div>
-</div>
+  </div>
+  <div class="">
+      <p>Page 2 </p>
 
-<!-- <div class="row padding background-dark">
-    
-</div> -->
-<div class="">
-    <p>Page 2 </p>
+  </div>
+  <div>
+      <app-footer></app-footer>
+  </div>
 </div>
