--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -1,29 +1,29 @@
 <div class="ui secondary  menu background-dark">
-  <a routerLink="contact" class="item menutext"></a>
-    <a routerLink="home" class=" item menutext">
+  <a routerLink="home-page" class="item menutext inactive"></a>
+    <a routerLink="home-page" class=" item menutext">
       <img class="logo" src="/assets/images/iict_acro_sml.png"/>
     </a>
-    
-    <a routerLink="contact" class="item menutext"></a>
-    <a routerLink="home" class=" item menutext ">
+
+    <a routerLink="home-page" class="item menutext"></a>
+    <a routerLink="company-profile" class=" item menutext ">
       Company Profile
     </a>
-    <a routerLink="about-us" class="item menutext">
+    <a routerLink="our-services" class="item menutext">
       Our Services
     </a>
-    <a routerLink="team" class="item menutext">
+    <a routerLink="our-expertise" class="item menutext">
       Our Expertise
     </a>
-    <a routerLink="contact" class="item menutext">
+    <a routerLink="project-work" class="item menutext">
       Our Work
     </a>
-    <a routerLink="team" class="item menutext">
+    <a routerLink="contact-us" class="item menutext">
         Contact Us
     </a>
-    <a routerLink="contact" class="item menutext"></a>
-    
-    <a routerLink="contact" class="item menutext">
+    <a routerLink="home-page" class="item menutext"></a>
+
+    <a routerLink="about-me" class="item menutext">
        About Me
     </a>
-    <a routerLink="contact" class="item menutext"></a> 
+    <a routerLink="home-page" class="item menutext"></a>
 </div>
