--- a/iiCt/src/app/our-services/our-services.component.html
+++ b/iiCt/src/app/our-services/our-services.component.html
@@ -1,1 +1,17 @@
-<p>our-services works!</p>
+<div class="container">
+  <div class="background-light">
+    <div class="">
+      <p>Our Services Page</p>
+
+    </div>
+    <div class="">
+
+
+    </div>
+  </div>
+
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
+
