--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -1,1 +1,17 @@
-<p>project-work works!</p>
+<div class="container">
+  <div class="background-light">
+    <div class="">
+      <p>Project Work Page</p>
+
+    </div>
+    <div class="">
+
+
+    </div>
+  </div>
+
+  <div>
+      <app-footer></app-footer>
+  </div>
+</div>
+
