Updates to values page left side

--- a/iiCt/src/app/home-page/home-page.component.css
+++ b/iiCt/src/app/home-page/home-page.component.css
@@ -10,5 +10,16 @@
     padding-top: 15rem;
     padding-bottom: 15rem;
     width: 25%;
-    
+}
+
+.values-format {
+  font-weight: bold;
+  font-size: 6rem;
+  line-height: 5rem;
+}
+
+.values-position {
+  margin-top: 10rem;
+  margin-left: 10rem;
+
 }
