--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -7,11 +7,29 @@
     </div>
     <div class="triangle-bottom"></div>
   </div>
-  <div class="">
-      <p>Page 2 </p>
+  <div class="next-page page-space">
+    <div class="background-light"></div>
+  </div>
+  <div class="divided-page page-space">
+      <div class="col-md-6 background-orange prime-white">
+        <div>
+          <!-- <p></p> -->
+          <img class="iiCt-logo" src="/assets/images/iict_acro_sml.png"/>
+          <div class="values-position">
+            <h1 class="values-format">EXPERTISE.</h1>
+            <h1 class="values-format">COMMITMENT.</h1>
+            <h1 class="values-format">VALUE.</h1>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 background-dark prime-white">
+        <div>
+          <p>Right</p>
+        </div>
+      </div>
 
   </div>
-  <div>
+  <div class="">
       <app-footer></app-footer>
   </div>
 </div>
