--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -1,38 +1,40 @@
-<div class="row  background-dark">
-  <div class="col-md-5 text-position">
-      <div >
-        <a class="term-margin-left"></a>
-        <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
-          Privacy Notice
-      </a>
+<div class="container page-space">
+  <div class="row  background-dark ">
+    <div class="col-md-5 text-position ">
+        <div >
+          <a class="term-margin-left"></a>
           <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
-              Terms of Service
-          </a>
-          <!-- <a><app-privacy></app-privacy></a>
-          <a><app-terms></app-terms></a> -->
-      </div>
+            Privacy Notice
+        </a>
+            <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
+                Terms of Service
+            </a>
+            <!-- <a><app-privacy></app-privacy></a>
+            <a><app-terms></app-terms></a> -->
+        </div>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-5">
+        <div class="col-md-5 prime-white">
+            <h3 class="text-position prime-orange" >Follow us</h3>
+        </div>
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="facebook">
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="linkedin">
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="twitter">
+    </div>
   </div>
-  <div class="col-md-3"></div>
-  <div class="col-md-4">
-      <div class="col-md-4 prime-white">
-          <h3 class="text-position prime-orange" >Follow us</h3>
-      </div>
-      <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="facebook">
-      <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="linkedin">
-      <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="twitter">
+  <div class="row background-dark bottom-padding prime-orange">
+    <span class="prime-orange" layout="row"><hr  flex/></span>
   </div>
-</div>
-<div class="row background-dark bottom-padding prime-orange">
-  <span class="prime-orange" layout="row"><hr  flex/></span>
-</div>
-<div class="row background-dark bottom-padding">
-  <div class ="col-md-5">
-      <a class="term-margin-left"></a>
-      <a class="margin-left copy-text prime-orange">© 2019-2020 iiConsult tech Inc. All Rights Reserved</a>
-  </div>
-  <div class ="col-md-5"></div>
-  <div class ="col-md-2">
-      <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Apple">
-      <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Google">
+  <div class="row background-dark bottom-padding">
+    <div class ="col-md-4">
+        <a class="term-margin-left"></a>
+        <a class="margin-left copy-text prime-orange">© 2019-2020 iiConsult tech Inc. All Rights Reserved</a>
+    </div>
+    <div class ="col-md-4"></div>
+    <div class ="col-md-2">
+        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Apple">
+        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Google">
+    </div>
   </div>
 </div>
