About Me right side of page basics

--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -1,17 +1,73 @@
 <div class="container">
-  <div class="background-light">
-    <div class="">
-      <p>About Me Page</p>
-
+  <div class="divided-page page-space">
+    <div class="col-md-6 prime-orange"> <!-- left side of page -->
+      <div class="next-page move-down">
+        <div class=""></div>
+          <div>
+            <h1></h1>
+            <h2></h2>
+            <h1 class=" left-title">ALL ABOUT ME</h1>
+          </div>
+          <img class="left-li-image" src="/assets/images/iict_acro_sml.png"/>
+      </div>
+      <div>
+        <hr class="">
+      </div>
     </div>
-    <div class="">
-
-
+    <div class="col-md-6 prime-gray"> <!-- right side of page -->
+      <h1> </h1>
+      <h1> </h1>
+      <div class="">
+        <div class="next-page">
+          <div>
+            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+          </div>
+          <div>
+            <h3 class="prime-orange">Personal Attributes</h3>
+            <ul class="atr-fonts">
+              <li class="">Leader, team player & consensus builder</li>
+              <li>Conceptual thinker, visionary, problem solver</li>
+              <li>Adaptable, quick to learn, comfortable with change</li>
+            </ul>
+          </div>
+        </div>
+        <h1></h1>
+        <div class="next-page">
+          <div>
+            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+          </div>
+          <div>
+            <h3 class="prime-orange">Soft Skills</h3>
+          <ul class="atr-fonts">
+            <li>Management, coaching & mentorship</li>
+            <li>Communication, strategy, planning</li>
+            <li>Organization, time & project management</li>
+            <li>Risk management and mitigation</li>
+          </ul>
+          </div>
+        </div>
+        <h1></h1>
+        <div class="next-page">
+          <div>
+            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+          </div>
+          <div>
+            <h3 class="prime-orange">Work & Field Experience</h3>
+            <ul class="atr-fonts">
+              <li>Quality assurance (SME)</li>
+              <li>Agile and SCRUM master (certified)</li>
+              <li>Software development (SDLC)</li>
+              <li>Graphic design & media development</li>
+              <li>Development frame-works, languages & tools</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div>
-      <app-footer></app-footer>
-  </div>
+</div>
+<div class="">
+    <app-footer></app-footer>
+</div>
 </div>
 
