--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -3,17 +3,13 @@
     <div class="img-position" >
       <div class="triangle-top"></div>
         <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
-        <!-- <div class="triangle-bottom"></div> -->
     </div>
     <div class="triangle-bottom"></div>
   </div>
-  <div class="next-page page-space">
-    <div class="background-light"></div>
-  </div>
+  <div class="next-page page-space"></div>
   <div class="divided-page page-space">
       <div class="col-md-6 background-orange prime-white">
         <div>
-          <!-- <p></p> -->
           <img class="iiCt-logo" src="/assets/images/iict_acro_sml.png"/>
           <div class="values-position">
             <h1 class="values-format">EXPERTISE.</h1>
