--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -8,7 +8,7 @@
             <h2></h2>
             <h1 class=" left-title">ALL ABOUT ME</h1>
           </div>
-          <img class="left-li-image" src="/assets/images/iict_acro_sml.png"/>
+          <img class="left-li-image" src="/assets/images/linkedin.svg"/>
       </div>
       <div>
         <hr class="">
@@ -20,7 +20,7 @@
       <div class="">
         <div class="next-page">
           <div>
-            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+            <img class="right-image-svg" src="/assets/images/color_puzzle.svg"/>
           </div>
           <div>
             <h3 class="prime-orange">Personal Attributes</h3>
@@ -34,24 +34,24 @@
         <h1></h1>
         <div class="next-page">
           <div>
-            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+            <img class="right-image-png" src="/assets/images/lightbulb1.png"/>
           </div>
-          <div>
+          <div class="right-text">
             <h3 class="prime-orange">Soft Skills</h3>
-          <ul class="atr-fonts">
-            <li>Management, coaching & mentorship</li>
-            <li>Communication, strategy, planning</li>
-            <li>Organization, time & project management</li>
-            <li>Risk management and mitigation</li>
-          </ul>
+            <ul class="atr-fonts">
+              <li>Management, coaching & mentorship</li>
+              <li>Communication, strategy, planning</li>
+              <li>Organization, time & project management</li>
+              <li>Risk management and mitigation</li>
+            </ul>
           </div>
         </div>
         <h1></h1>
         <div class="next-page">
           <div>
-            <img class="right-images" src="/assets/images/iict_acro_sml.png"/>
+            <img class="right-image-png" src="/assets/images/checklist.png"/>
           </div>
-          <div>
+          <div class="right-text">
             <h3 class="prime-orange">Work & Field Experience</h3>
             <ul class="atr-fonts">
               <li>Quality assurance (SME)</li>
