--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -18,9 +18,9 @@
         <div class="col-md-5 prime-white">
             <h3 class="text-position prime-orange" >Follow us</h3>
         </div>
-        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="facebook">
-        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="linkedin">
-        <img class="term-margin-left img-greyed-out" src="/assets/Images/" alt="twitter">
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/facebook_rnd.svg" alt="facebook">
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/linkedin_rnd.png" alt="linkedin">
+        <img class="term-margin-left img-greyed-out" src="/assets/Images/twitter_rnd.png" alt="twitter">
     </div>
   </div>
   <div class="row background-dark bottom-padding prime-orange">
@@ -33,8 +33,8 @@
     </div>
     <div class ="col-md-4"></div>
     <div class ="col-md-2">
-        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Apple">
-        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/" alt="Google">
+        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/apple_apps.svg" alt="Apple">
+        <img class="term-margin-left store-img img-greyed-out" src="/assets/Images/google_play.svg" alt="Google">
     </div>
   </div>
 </div>
