updates for the contact page

--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <div class="background-light">
+  <div class="">
+
     <div class="">
+      <img src="/iiCt/src/assets/images/contact_us1.jpg" alt="background_logo">
       <p>Contact Us Page</p>
 
     </div>
