--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,19 +1,38 @@
-<div class="container">
-  <div class="">
-
-    <div class="">
-      <img src="/iiCt/src/assets/images/contact_us1.jpg" alt="background_logo">
-      <p>Contact Us Page</p>
-
+<div class="container background-gray">
+  <div class="divided-page page-space">
+    <div class="col-md-6 prime-orange"> <!-- left side of page -->
+      <div class="next-page move-down">
+        <div class=""></div>
+          <!-- <img class="left-li-image" src="/assets/images/linkedin.svg"/> -->
+      </div>
+      <div>
+        <hr class="">
+      </div>
     </div>
-    <div class="">
+    <div class="col-md-6 prime-gray"> <!-- right side of page -->
+      <h1> </h1>
+      <h1> </h1>
+      <div class="">
+        <div class="next-page">
+          <div>
+            <!-- <img class="right-image-svg" src="/assets/images/color_puzzle.svg"/> -->
+          </div>
+          <div class="col-md-10">
+            <h2 class="prime-orange">Company Profile</h2>
+            <h3>iiConsult tech Inc. is a management quality and development consultancy with
+              25 years of project development and technology experience. We help the leaders
+              - of businesses large and small - to make sound and informed decisions regarding
+              their IT projects, software development and digital marketing activities.</h3>
+          </div>
+        </div>
 
 
+      </div>
     </div>
-  </div>
 
-  <div>
-      <app-footer></app-footer>
-  </div>
+</div>
+<div class="">
+    <app-footer></app-footer>
+</div>
 </div>
 
