--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -1,17 +1,72 @@
 <div class="container">
-  <div class="background-light">
-    <div class="">
-      <p>Project Work Page</p>
-
+  <div class="divided-page page-space background-dark prime-white">
+    <div class="col-md-6 prime-orange"> <!-- left side of page -->
+      <div class="next-page move-down">
+        <div class=""></div>
+          <div>
+            <h1></h1>
+            <h2></h2>
+            <h1 class=" left-title">ALL ABOUT ME</h1>
+          </div>
+          <!-- <img class="left-li-image" src="/assets/images/linkedin.svg"/> -->
+      </div>
+      <div>
+        <hr class="">
+      </div>
     </div>
-    <div class="">
-
-
+    <div class="col-md-6 prime-gray"> <!-- right side of page -->
+      <h1> </h1>
+      <h1> </h1>
+      <div class="">
+        <div class="next-page">
+          <div>
+            <!-- <img class="right-image-svg" src="/assets/images/color_puzzle.svg"/> -->
+          </div>
+          <div>
+            <h4>Logo Design</h4>
+            <p class="atr-fonts">
+              Testimonials are short quotes from people who love your brand. It's a great way to convince customers to try your services.
+            </p>
+          </div>
+        </div>
+        <h1></h1>
+        <div class="next-page">
+          <div>
+            <!-- <img class="right-image-png" src="/assets/images/lightbulb1.png"/> -->
+          </div>
+          <div class="right-text">
+            <h3 class="prime-orange">Soft Skills</h3>
+            <ul class="atr-fonts">
+              <li>Management, coaching & mentorship</li>
+              <li>Communication, strategy, planning</li>
+              <li>Organization, time & project management</li>
+              <li>Risk management and mitigation</li>
+            </ul>
+          </div>
+        </div>
+        <h1></h1>
+        <div class="next-page">
+          <div>
+            <!-- <img class="right-image-png" src="/assets/images/checklist.png"/> -->
+          </div>
+          <div class="right-text">
+            <h3 class="prime-orange">Work & Field Experience</h3>
+            <ul class="atr-fonts">
+              <li>Quality assurance (SME)</li>
+              <li>Agile and SCRUM master (certified)</li>
+              <li>Software development (SDLC)</li>
+              <li>Graphic design & media development</li>
+              <li>Development frame-works, languages & tools</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-
-  <div>
-      <app-footer></app-footer>
-  </div>
+    <div class="next-page background-light">
+      <h1></h1>
+    </div>
 </div>
-
+<div class="">
+    <app-footer></app-footer>
+</div>
+</div>
