--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="divided-page page-space background-dark prime-white">
     <div class="col-md-6 prime-orange"> <!-- left side of page -->
-      <div class="next-page move-down">
+      <div class="next-page">
         <div class=""></div>
           <div>
             <h1></h1>
@@ -20,44 +20,48 @@
       <div class="">
         <div class="next-page">
           <div>
-            <!-- <img class="right-image-svg" src="/assets/images/color_puzzle.svg"/> -->
+            <img class="right-image-png left-one" src="/assets/images/goShop.png"/>
           </div>
           <div>
-            <h4>Logo Design</h4>
-            <p class="atr-fonts">
-              Testimonials are short quotes from people who love your brand. It's a great way to convince customers to try your services.
+            <h1></h1>
+            <h4 class="prime-orange title-fonts">Logo Design</h4>
+            <p class="body-fonts">
+              Testimonials are short quotes from people who love your brand.
+              It's a great way to convince customers to try your services.
             </p>
           </div>
         </div>
         <h1></h1>
-        <div class="next-page">
-          <div>
-            <!-- <img class="right-image-png" src="/assets/images/lightbulb1.png"/> -->
-          </div>
-          <div class="right-text">
-            <h3 class="prime-orange">Soft Skills</h3>
-            <ul class="atr-fonts">
-              <li>Management, coaching & mentorship</li>
-              <li>Communication, strategy, planning</li>
-              <li>Organization, time & project management</li>
-              <li>Risk management and mitigation</li>
-            </ul>
-          </div>
-        </div>
         <h1></h1>
         <div class="next-page">
           <div>
-            <!-- <img class="right-image-png" src="/assets/images/checklist.png"/> -->
+            <img class="right-image-png" src="/assets/images/vara.png"/>
           </div>
-          <div class="right-text">
-            <h3 class="prime-orange">Work & Field Experience</h3>
-            <ul class="atr-fonts">
-              <li>Quality assurance (SME)</li>
-              <li>Agile and SCRUM master (certified)</li>
-              <li>Software development (SDLC)</li>
-              <li>Graphic design & media development</li>
-              <li>Development frame-works, languages & tools</li>
-            </ul>
+          <div class="">
+            <h4 class="prime-orange title-fonts">Image and Website Design</h4>
+            <p class="body-fonts">
+              Created a series of visual collateral materials,
+              including the logo for a start-up venture.
+              Created a video and overall look for the website:
+              <span>www.varaplatforms.com</span>
+            </p>
+          </div>
+        </div>
+        <h1></h1>
+        <h1></h1>
+        <div class="next-page">
+          <div>
+            <img class="right-image-png" src="/assets/images/sMail.png"/>
+          </div>
+          <div class="">
+            <h1></h1>
+
+            <h4 class="prime-orange title-fonts">iOS Software Development</h4>
+            <p class="body-fonts">
+              As part of a school project, the team built an iOS application
+              - sMail - that allows users to log into their gmail account to view emails.
+              you can also view folders, create drafts and send emails.
+            </p>
           </div>
         </div>
       </div>
