--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container page-space">
+<div class="container col-md-12 page-space">
   <div class="row  background-dark ">
     <div class="col-md-5 text-position ">
         <div >
@@ -27,7 +27,7 @@
     <span class="prime-orange" layout="row"><hr  flex/></span>
   </div>
   <div class="row background-dark bottom-padding">
-    <div class ="col-md-4">
+    <div class ="col-md-5">
         <a class="term-margin-left"></a>
         <a class="margin-left copy-text prime-orange">© 2019-2020 iiConsult tech Inc. All Rights Reserved</a>
     </div>
