fixed the size of the navbar

--- a/iiCt/src/app/nav-bar/nav-bar.component.html
+++ b/iiCt/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
-<div class="ui secondary  menu background-dark">
-  <a routerLink="home-page" class="item menutext inactive"></a>
+<div class="container ui secondary menu background-dark">
+  <!-- <a routerLink="home-page" class="item menutext inactive"></a> -->
     <a routerLink="home-page" class=" item menutext">
       <img class="logo" src="/assets/images/iict_acro_sml.png"/>
     </a>
@@ -25,5 +25,5 @@
     <a routerLink="about-me" class="item menutext">
        About Me
     </a>
-    <a routerLink="home-page" class="item menutext"></a>
+    <!-- <a routerLink="home-page" class="item menutext"></a> -->
 </div>
