--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,4 +1,5 @@
-<div class="container background-gray">
+<div class="container background bgimg-contact">
+  <div class=""></div>
   <div class="divided-page page-space">
     <div class="col-md-6 prime-orange"> <!-- left side of page -->
       <div class="next-page move-down">
