fixed the space between body and footer for the remaining pages

--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -32,6 +32,9 @@
     </div>
 
 </div>
+<div class="next-page background-light">
+  <h1></h1>
+</div>
 <div class="">
     <app-footer></app-footer>
 </div>
