--- a/iiCt/src/app/our-expertise/our-expertise.component.html
+++ b/iiCt/src/app/our-expertise/our-expertise.component.html
@@ -9,7 +9,9 @@
 
     </div>
   </div>
-
+  <div class="next-page background-light">
+    <h1></h1>
+  </div>
   <div>
       <app-footer></app-footer>
   </div>
