added color to menu selection hover

--- a/iiCt/src/app/nav-bar/nav-bar.component.css
+++ b/iiCt/src/app/nav-bar/nav-bar.component.css
@@ -6,6 +6,10 @@
     width: 110px;
 }
 
+.ui.secondary.menu .item:hover {
+  color: #ff914d;
+}
+
 .logo {
     font-size: 25px;
     border-radius: 1px;
