--- a/iiCt/src/app/contact-us/contact-us.component.css
+++ b/iiCt/src/app/contact-us/contact-us.component.css
@@ -1,3 +1,3 @@
-.bkgd-image {
-  background-image: url(/iiCt/src/assets/images/contact_us1.jpg);
+.bgimg-contact{
+  background-image: url(src/assets/images/contact_us1.jpg);
 }
