--- a/iiCt/src/app/company-profile/company-profile.component.html
+++ b/iiCt/src/app/company-profile/company-profile.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="next-page background-light">
+    <div class="next-page background-clear">
       <h1></h1>
     </div>
   </div>
