--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -32,7 +32,7 @@
     </div>
 
 </div>
-<div class="next-page background-light">
+<div class="next-page background-clear">
   <h1></h1>
 </div>
 <div class="">
