--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -67,7 +67,7 @@
       </div>
     </div>
 </div>
-<div class="next-page background-light">
+<div class="next-page background-clear">
   <h1></h1>
 </div>
 <div class="">
