--- a/iiCt/src/app/contact-us/contact-us.component.css
+++ b/iiCt/src/app/contact-us/contact-us.component.css
@@ -1,3 +1,28 @@
 .bgimg-contact{
   background-image: url(src/assets/images/contact_us1.jpg);
 }
+h1 {
+  padding-top: 50px;
+}
+
+h2 {
+  margin: 3rem;
+}
+
+h3 {
+  margin: 0;
+  padding-left: 20px;
+  font-weight: 400;
+}
+
+h4 {
+  margin: 0;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  font-weight: 600;
+}
+h5 {
+  padding-bottom: 1rem;
+}
+
+
