--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,39 +1,29 @@
-<div class="container background bgimg-contact">
-  <div class=""></div>
-  <div class="divided-page page-space">
-    <div class="col-md-6 prime-orange"> <!-- left side of page -->
-      <div class="next-page move-down">
-        <div class=""></div>
-          <!-- <img class="left-li-image" src="/assets/images/linkedin.svg"/> -->
-      </div>
-      <div>
-        <hr class="">
-      </div>
-    </div>
-    <div class="col-md-6 prime-gray"> <!-- right side of page -->
-      <h1> </h1>
-      <h1> </h1>
-      <div class="">
-        <div class="next-page">
+<div class="container">
+  <div class="background bgimg-contact">
+    <div class="divided-page ">
+      <div class="col-md-6 prime-gray"> <!-- left side of page -->
+        <div class="next-page move-down">
           <div>
-            <!-- <img class="right-image-svg" src="/assets/images/color_puzzle.svg"/> -->
+            <h1></h1>
+            <h4 class="prime-orange">Mailing Address</h4>
+            <h3>1401-203 Catherine Street</h3>
+            <h3>Ottawa, ON K2P 1J5</h3>
+            <h2></h2>
+            <h4 class="prime-orange">Email Address</h4>
+            <h3>gervan.nantel@iiconsulttech.com</h3>
+            <h2></h2>
+            <h4 class="prime-orange">Phone Number</h4>
+            <h3>(613) 581-1426</h3>
           </div>
-          <div class="col-md-10">
-            <h2 class="prime-orange">Company Profile</h2>
-            <h3>iiConsult tech Inc. is a management quality and development consultancy with
-              25 years of project development and technology experience. We help the leaders
-              - of businesses large and small - to make sound and informed decisions regarding
-              their IT projects, software development and digital marketing activities.</h3>
-          </div>
-        </div>
-
+      </div>
+      <div class="col-md-6 prime-gray"> <!-- right side of page -->
 
       </div>
     </div>
-
+  </div>
 </div>
 <div class="next-page background-clear">
-  <h1></h1>
+  <h5></h5>
 </div>
 <div class="">
     <app-footer></app-footer>
