--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -8,7 +8,9 @@
             <h2></h2>
             <h1 class=" left-title">ALL ABOUT ME</h1>
           </div>
-          <img class="left-li-image" src="/assets/images/linkedin.svg"/>
+          <a href="https://www.linkedin.com/in/gervan-p-nantel/">
+            <img class="left-li-image" src="/assets/images/linkedin.svg"/>
+          </a>
       </div>
       <div>
         <hr class="">
