changed terms and privacy ids

--- a/iiCt/src/app/footer/privacy/privacy.component.html
+++ b/iiCt/src/app/footer/privacy/privacy.component.html
@@ -2,8 +2,8 @@
   <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
      Privacy Notice
   </a>
-  <div ngbDropdownMenu class="drop-box" id="background-dark">
-      <div class="popup-box  prime-white">
+  <div ngbDropdownMenu class="drop-box" id="privacy">
+      <div class="popup-box prime-white">
           <h3></h3>
           <h2 class= "prime-orange term-heading">Privacy Notice</h2>
           <h3></h3>
@@ -30,7 +30,6 @@
               The updated Privacy Policy and Terms of Service are effective as of September 1,
               2019.
           </p>
-
       </div>
   </div>
 </a>
