--- a/iiCt/src/app/footer/terms/terms.component.html
+++ b/iiCt/src/app/footer/terms/terms.component.html
@@ -2,7 +2,7 @@
   <a href (click)="(false)" class="term-margin-left prime-white" ngbDropdownToggle>
      Terms of Service
   </a>
-  <div ngbDropdownMenu class="drop-box" id="background-dark">
+  <div ngbDropdownMenu class="drop-box" id="terms">
       <div class="popup-box  prime-white">
           <h3></h3>
           <h2 class= "prime-orange term-heading">Terms of Service</h2>
