Fixed the project page title and spacing

--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -4,14 +4,25 @@
       <div class="next-page">
         <div class=""></div>
           <div>
-            <h1></h1>
             <h2></h2>
-            <h1 class=" left-title">ALL ABOUT ME</h1>
+            <div class="next-page prime-white ">
+              <div class="left-space">
+                <h5 class=" ">SMALL</h5>
+                <h5 class=" ">SAMPLE</h5>
+              </div>
+              <div>
+                <h1 class="left-title">PROJECT WORK</h1>
+                <hr>
+              </div>
+            </div>
+
+
+
           </div>
           <!-- <img class="left-li-image" src="/assets/images/linkedin.svg"/> -->
       </div>
       <div>
-        <hr class="">
+
       </div>
     </div>
     <div class="col-md-6 prime-gray"> <!-- right side of page -->
@@ -43,7 +54,7 @@
               Created a series of visual collateral materials,
               including the logo for a start-up venture.
               Created a video and overall look for the website:
-              <span>www.varaplatforms.com</span>
+              <a class="prime-orange" href="https://varaplatforms.com/#/home">www.varaplatforms.com</a>
             </p>
           </div>
         </div>
