--- a/iiCt/src/app/project-work/project-work.component.css
+++ b/iiCt/src/app/project-work/project-work.component.css
@@ -19,13 +19,19 @@
 
 .right-image-png {
   width: 50%;
-  margin-left: -10px;
+  margin-left: -1px;
   margin-right: -10px;
 }
 
-/* .right-text {
-  margin-left: -69rem;
-} */
+.left-image-png {
+  width: 50%;
+  margin-left: -20px;
+  padding-top: 20px;
+}
+
+.left-text {
+  margin-left: -5rem;
+}
 
 .left-li-image {
   width: 12%;
@@ -40,6 +46,10 @@
 
 .left-space {
   padding-left:  50px;
+}
+
+.left-backspace {
+  margin-left:  -50px;
 }
 
 .left-title {
@@ -57,7 +67,7 @@ hr {
 }
 
 .move-down {
-  margin-top: 190px;
+  margin-top: 40px;
 }
 
 h1 {
@@ -66,7 +76,12 @@ h1 {
 }
 
 h2 {
+  padding-left: 10px;
   padding-bottom: 75px;
+}
+h3 {
+  padding-left: 10px;
+  padding-bottom: 45px;
 }
 
 h5 {
