Final fixes to project page and add 2 images

--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -38,7 +38,7 @@
         <div class="next-page left-space">
           <h3></h3>
           <div>
-            <img class="move-down left-image-png" src="/assets/images/goShop.png"/>
+            <img class="move-down left-image-png" src="/assets/images/myPet.png"/>
           </div>
           <div class="left-backspace">
             <h3></h3>
