--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="background-dark">
-    <div class="img-position" >
-      <div class="triangle-top"></div>
+  <div class="bgimg-corners ">
+    <div class=" img-position" >
+      <!-- <div class="triangle-top"></div> -->
         <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
     </div>
-    <div class="triangle-bottom"></div>
+    <!-- <div class="triangle-bottom"></div> -->
   </div>
   <div class="next-page page-space"></div>
   <div class="divided-page page-space">
