--- a/iiCt/src/app/project-work/project-work.component.css
+++ b/iiCt/src/app/project-work/project-work.component.css
@@ -24,13 +24,13 @@
 }
 
 .left-image-png {
-  width: 50%;
-  margin-left: -20px;
+  width: 25%;
   padding-top: 20px;
+  padding-left: -9rem;
 }
 
 .left-text {
-  margin-left: -5rem;
+  margin-left: -10rem;
 }
 
 .left-li-image {
@@ -45,11 +45,11 @@
 }
 
 .left-space {
-  padding-left:  50px;
+  padding-left:  80px;
 }
 
 .left-backspace {
-  margin-left:  -50px;
+  margin-left:  -30rem;
 }
 
 .left-title {
