--- a/iiCt/src/app/our-expertise/our-expertise.component.html
+++ b/iiCt/src/app/our-expertise/our-expertise.component.html
@@ -1,16 +1,51 @@
 <div class="container">
-  <div class="background-light">
-    <div class="">
-      <p>Our Expertise Page</p>
-
+  <div class="background-dark disp-fullpage">
+    <div class="col-md-12 prime-orange"> <!-- Top title section of page -->
+      <div class="col-md-4 page-space">
+        <img class="iiCt-logo-extra" src="/assets/images/iict_acro_sml.png"/>
+      </div>
+      <div class="col-md-4">
+        <h1>Our Expertise Page</h1>
+      </div>
     </div>
-    <div class="">
-
-
+    <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
+      <div class="col-md-4 disp-vert">  <!-- Lower section 1st column -->
+        <div>
+          <img class="exp-images " src="/assets/images/exp_quality.png"/>
+        </div>
+        <div class="exp-heading">
+          <h3>Quality Assurance Advisory</h3>
+        </div>
+        <div class="exp-text prime-white">
+          <P>Years of quality, leadership  and management expertise to help your company move forward.</P>
+        </div>
+      </div>
+      <div class="col-md-4 disp-vert">  <!-- Lower section 2nd column -->
+        <div>
+          <img class="exp-images " src="/assets/images/exp_socmed.png"/>
+        </div>
+        <div class="exp-heading">
+          <h3>Digital Advisory</h3>
+        </div>
+        <div class="exp-text prime-white">
+          <P>Solutions for your company's image development, media design and digital collateral.</P>
+        </div>
+      </div>
+      <div class="col-md-4 disp-vert">  <!-- Lower section 3rd column -->
+        <div>
+          <img class="exp-images " src="/assets/images/exp_computer.png"/>
+        </div>
+        <div class="exp-heading">
+          <h3>Development Advisory</h3>
+        </div>
+        <div class="exp-text prime-white">
+          <P>Developer services for support in HTML5, CSS, Javascript, Angualr, database, iOS / xCode, Android Studio / Java and more...</P>
+        </div>
+      </div>
     </div>
   </div>
   <div class="next-page background-clear">
-    <h1></h1>
+    <h6></h6>
   </div>
   <div>
       <app-footer></app-footer>
