--- a/iiCt/src/app/our-expertise/our-expertise.component.html
+++ b/iiCt/src/app/our-expertise/our-expertise.component.html
@@ -1,20 +1,20 @@
 <div class="container">
-  <div class="background-dark disp-fullpage">
-    <div class="col-md-12 prime-orange"> <!-- Top title section of page -->
+  <div class="background-orange disp-fullpage">
+    <div class="col-md-12 prime-gray"> <!-- Top title section of page -->
       <div class="col-md-4 page-space">
         <img class="iiCt-logo-extra" src="/assets/images/iict_acro_sml.png"/>
       </div>
       <div class="col-md-4">
-        <h1>Our Expertise Page</h1>
+        <h1>OUR EXPERTISE</h1>
       </div>
     </div>
-    <div class="col-md-12 prime-orange"> <!-- Lower section of page -->
+    <div class="col-md-12 prime-gray"> <!-- Lower section of page -->
       <div class="col-md-4 disp-vert">  <!-- Lower section 1st column -->
         <div>
           <img class="exp-images " src="/assets/images/exp_quality.png"/>
         </div>
         <div class="exp-heading">
-          <h3>Quality Assurance Advisory</h3>
+          <h4>Quality Assurance Advisory</h4>
         </div>
         <div class="exp-text prime-white">
           <P>Years of quality, leadership  and management expertise to help your company move forward.</P>
@@ -25,7 +25,7 @@
           <img class="exp-images " src="/assets/images/exp_socmed.png"/>
         </div>
         <div class="exp-heading">
-          <h3>Digital Advisory</h3>
+          <h4>Digital Advisory</h4>
         </div>
         <div class="exp-text prime-white">
           <P>Solutions for your company's image development, media design and digital collateral.</P>
@@ -36,10 +36,13 @@
           <img class="exp-images " src="/assets/images/exp_computer.png"/>
         </div>
         <div class="exp-heading">
-          <h3>Development Advisory</h3>
+          <h4>Development Advisory</h4>
         </div>
         <div class="exp-text prime-white">
           <P>Developer services for support in HTML5, CSS, Javascript, Angualr, database, iOS / xCode, Android Studio / Java and more...</P>
+        </div>
+        <div>
+          <img class="chart-image " src="/assets/images/chart_wht.png"/>
         </div>
       </div>
     </div>
