--- a/iiCt/src/app/our-expertise/our-expertise.component.css
+++ b/iiCt/src/app/our-expertise/our-expertise.component.css
@@ -25,7 +25,8 @@ h6 {
 .exp-heading {
   text-align: center;
   padding-bottom: 1rem;
-  font:   normal bold  "Roboto-Thin", sans-serif
+  /* font:   normal bold  "Roboto-Thin", sans-serif */
+  font-weight: 700;
 }
 
 .chart-image {
