Tweaks to title sizes

--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-md-6 background-dark prime-white">
         <div>
-          <p>Right</p>
+          <p>Right TBD</p>
         </div>
       </div>
 
