Made updates to the border shapes on pages

--- a/iiCt/src/app/company-profile/company-profile.component.html
+++ b/iiCt/src/app/company-profile/company-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container ">
   <div class=""> <!-- both sides of the page -->
-    <div class="divided-page page-space background-dark">
+    <div class="divided-page page-space background-dark bg-rnd-right">
       <div class="col-md-8 prime-orange"> <!-- left side of page -->
         <div class="">
           <div class=""></div>
