--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="background bgimg-contact">
+  <div class="background bgimg-contact bg-rnd-right">
     <div class="divided-page ">
       <div class="col-md-6 prime-gray"> <!-- left side of page -->
         <div class="next-page move-down">
