--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="container col-md-12 page-space">
-  <div class="row  background-dark ">
+<div class="container col-md-12 page-space bg-rounded">
+  <div class="row  background-dark bg-rnd-top">
     <div class="col-md-5 text-position ">
         <div >
           <a class="term-margin-left"></a>
@@ -31,7 +31,7 @@
   <div class="row background-dark bottom-padding prime-orange">
     <span class="prime-orange" layout="row"><hr  flex/></span>
   </div>
-  <div class="row background-dark bottom-padding">
+  <div class="row background-dark bottom-padding bg-rnd-btm">
     <div class ="col-md-5">
         <a class="margin-left copy-text prime-orange">© 2019-2020 iiConsult tech Inc. All Rights Reserved</a>
     </div>
