--- a/iiCt/src/app/our-services/our-services.component.html
+++ b/iiCt/src/app/our-services/our-services.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="background-boxed disp-fullpage">
+  <div class="background-boxed bg-rnd-trbl disp-fullpage">
     <div class="col-md-12 prime-orange"> <!-- Top title section of page -->
       <div class="col-md-4 page-space">
         <img class="iiCt-logo-extra" src="/assets/images/iict_acro_sml.png"/>
