--- a/iiCt/src/app/our-expertise/our-expertise.component.html
+++ b/iiCt/src/app/our-expertise/our-expertise.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="background-orange disp-fullpage">
+  <div class="background-orange disp-fullpage bg-rnd-trbl">
     <div class="col-md-12 prime-gray"> <!-- Top title section of page -->
       <div class="col-md-4 page-space">
         <img class="iiCt-logo-extra" src="/assets/images/iict_acro_sml.png"/>
