--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="divided-page page-space background-dark prime-white">
+  <div class="divided-page page-space background-dark bg-rnd-trbl prime-white">
     <div class="col-md-6 prime-orange"> <!-- left side of page -->
       <div class="next-page">
         <div class=""></div>
