--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -1,12 +1,13 @@
 <div class="container">
   <div class="divided-page page-space">
     <div class="col-md-6 prime-orange"> <!-- left side of page -->
-      <div class="next-page move-down">
+      <div>
+        <img class="left-image-png" src="/assets/images/apps_top.png"/>
+      </div>
+      <div class="next-page">
         <div class=""></div>
           <div>
-            <h1></h1>
-            <h2></h2>
-            <h1 class=" left-title">ALL ABOUT ME</h1>
+            <h1 class="left-title">ALL ABOUT ME</h1>
           </div>
           <a href="https://www.linkedin.com/in/gervan-p-nantel/">
             <img class="left-li-image" src="/assets/images/linkedin.svg"/>
@@ -15,7 +16,11 @@
       <div>
         <hr class="">
       </div>
+      <div>
+        <img class="left-image-png" src="/assets/images/apps_btm.png"/>
+      </div>
     </div>
+
     <div class="col-md-6 prime-gray"> <!-- right side of page -->
       <h1> </h1>
       <h1> </h1>
