Updates to the values page text and image added

--- a/iiCt/src/app/home-page/home-page.component.html
+++ b/iiCt/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="background-dark ">
+  <div class="background-dark  ">
     <div class=" img-position" >
       <div class="triangle-top"></div>
         <img class="big-logo" src="/assets/images/iict_trnspt_lrg.png"/>
@@ -11,16 +11,20 @@
       <div class="col-md-6 background-orange prime-white">
         <div>
           <img class="iiCt-logo" src="/assets/images/iict_acro_sml.png"/>
-          <div class="values-position">
-            <h1 class="values-format">EXPERTISE.</h1>
-            <h1 class="values-format">COMMITMENT.</h1>
-            <h1 class="values-format">VALUE.</h1>
-          </div>
+          <!-- <div class="values-position_l">
+          </div> -->
         </div>
       </div>
       <div class="col-md-6 background-dark prime-white">
         <div>
-          <p>Right TBD</p>
+          <div>
+            <img class="values-image" src="/assets/images/values.png"/>
+          </div>
+          <div class="values-position_r">
+            <h1 class="values-format">EXPERTISE.</h1>
+            <h1 class="values-format">COMMITMENT.</h1>
+            <h1 class="values-format">VALUE.</h1>
+          </div>
         </div>
       </div>
 
