--- a/iiCt/src/app/home-page/home-page.component.css
+++ b/iiCt/src/app/home-page/home-page.component.css
@@ -12,14 +12,30 @@
     width: 25%;
 }
 
+h1 {
+  z-index: 100;
+}
+
 .values-format {
   font-weight: bold;
   font-size: 6rem;
   line-height: 5rem;
 }
 
-.values-position {
-  margin-top: 10rem;
-  margin-left: 10rem;
+/* .values-position_l {
+  justify-content: top;
+  margin-top: 7rem;
+  margin-left: 12rem;
+} */
 
+.values-position_r {
+  margin-top: -29rem;
+  margin-left: -46rem;
+}
+
+.values-image {
+  width: 125%;
+  padding-top: 9rem;
+  margin-left: -22rem;
+  z-index: -10;
 }
