Modified the Work & Field Experience text to be more comprehensive

--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -61,11 +61,16 @@
           <div class="right-text">
             <h3 class="prime-orange">Work & Field Experience</h3>
             <ul class="atr-fonts">
-              <li>Quality assurance (SME)</li>
+              <li>Quality Assurance and testing (SME)</li>
               <li>Agile and SCRUM master (certified)</li>
-              <li>Software development (SDLC)</li>
-              <li>Graphic design & media development</li>
-              <li>Development frame-works, languages & tools</li>
+              <li>Software developer & development methodolgy (SDLC)</li>
+              <li>Graphic / UI design & media collateral creation </li>
+              <li>Development frame-works, languages & colaborative tools</li>
+              <ul>
+                <li>HTML, CSS, Angular, xCode, Android Studio, Java</li>
+                <li>GIT, Jira, Azure, Teams, Zoom, etc</li>
+              </ul>
+
             </ul>
           </div>
         </div>
