Added new studies page link and some graphic assets

--- a/iiCt/src/app/about-me/about-me.component.html
+++ b/iiCt/src/app/about-me/about-me.component.html
@@ -63,7 +63,10 @@
             <ul class="atr-fonts">
               <li>Quality Assurance and testing (SME)</li>
               <li>Agile and SCRUM master (certified)</li>
-              <li>Software developer & development methodolgy (SDLC)</li>
+              <li>Software developer & <a routerLink="/studies" class="">
+                development methodolgy
+              </a> (SDLC)
+              </li>
               <li>Graphic / UI design & media collateral creation </li>
               <li>Development frame-works, languages & colaborative tools</li>
               <ul>
