--- a/iiCt/src/app/contact-us/contact-us.component.html
+++ b/iiCt/src/app/contact-us/contact-us.component.html
@@ -10,7 +10,9 @@
             <h3>Ottawa, ON K2P 1J5</h3>
             <h2></h2>
             <h4 class="prime-orange">Email Address</h4>
-            <h3>gervan.nantel@iiconsulttech.com</h3>
+            <h3>support@iiconsulttech.com</h3>
+            <h2></h2>
+            <a class="button_look btn_space" href="mailto:support@iiconsulttech.com">Email Us</a>
             <h2></h2>
             <h4 class="prime-orange">Phone Number</h4>
             <h3>(613) 581-1426</h3>
