--- a/iiCt/src/styles.css
+++ b/iiCt/src/styles.css
@@ -54,6 +54,24 @@
   border-bottom-right-radius: 50px;
  }
 
+ .button_look {
+  background:    #ff914d;
+  border-radius: 5px;
+  box-shadow:    2px 2px #fe5828;
+  padding:       10px 15px;
+  color:         #ffffff;
+  display:       inline-block;
+  font:          normal  20px/1 "Roboto", sans-serif;
+  text-align:    center;
+  text-shadow:   1px 1px #fe5828;
+  border-style: none
+ }
+
+ .button_look:hover {
+  box-shadow:    0px 0px #fe5828;
+  background:    #fe5828;
+ }
+
 
 .bgimg-contact {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.0)), url('/iiCt/src/assets/images/contact_us1.jpg');
