--- a/iiCt/src/app/project-work/project-work.component.html
+++ b/iiCt/src/app/project-work/project-work.component.html
@@ -73,7 +73,7 @@
         <h1></h1>
         <div class="next-page">
           <div>
-            <img class="right-image-png" src="/assets/images/vara.png"/>
+            <img class="right-image-png" src="/assets/images/VARA.gif"/>
           </div>
           <div class="">
             <h4 class="prime-orange title-fonts">Image and Website Design</h4>
