Updated links and made button work

--- a/iiCt/src/app/about-me/studies/studies.component.html
+++ b/iiCt/src/app/about-me/studies/studies.component.html
@@ -22,10 +22,10 @@
           <img class="serve-images " src="/assets/images/Soft_dev.png"/>
         </div>
         <div class="exp-heading">
-          <h2>Algorithms</h2>
+          <h2> <a class="prime-orange" href="https://www.programiz.com/dsa/algorithm">Algorithms</a></h2>
         </div>
         <div class="serve-text prime-grey">
-          <P>Touched on algorithms and how they may be used.</P>
+          <P>A process or set of rules to be followed in calculations or other problem-solving operations.</P>
         </div>
       </div>
       <div class="col-md-4 disp-vert">  <!-- Lower section 2nd column -->
