added sign-in link to page to the footer

--- a/iiCt/src/app/footer/footer.component.html
+++ b/iiCt/src/app/footer/footer.component.html
@@ -11,7 +11,12 @@
             Terms of Service
           </a>
           <!-- <a><app-terms></app-terms></a> -->
+
+          <a href (click)="(false)" class="col-md-4 term-margin-left prime-white" ngbDropdownToggle>
+            Sign-In
+          </a>
         </div>
+
     </div>
     <div class="col-md-1"></div> <!-- space betwwen the columns-->
     <div class="col-md-6">
